--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
-ul li {
-  list-style-type: armenian;
+.app-wrapper {
+  display: grid;
+  width: 1200px;
+  margin: 0 auto;
+
+  grid-template-areas: 
+  "header header"
+  "nav content";
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+  gap: 10px;
+}
+
+.header {
+  grid-area: header;
+  background-color: aquamarine;
+}
+
+.nav {
+  grid-area: nav;
+  background-color: bisque;
+}
+
+.content {
+  grid-area: content;
+  background-color: cornflowerblue;
+}
+
+.content img {
+  width: 1000px;
+  height: 200px;
 }
