--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,9 @@
   grid-template-columns: 2fr 10fr;
   gap: 10px;
 }
+
+
+.app-wrapper-content {
+  grid-area: content;
+  background-color: cornflowerblue;
+}
