--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,4 @@
-.content {
-  grid-area: content;
-  background-color: cornflowerblue;
-}
-
-.content img.banner {
+img.banner {
   width: 1000px;
   height: 200px;
 }
